--- a/VanillaDragDrop/index.html
+++ b/VanillaDragDrop/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla Components</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body>    
+    <p>Drag the ball.</p>
+    <img src="https://js.cx/clipart/ball.svg" style="cursor:pointer" width="40" height="40" id="ball">
     <script src="./src/main.js" type="module"></script>
   </body>
 </html>
