Fix: image animation shift error

--- a/VanillaDragDrop/index.html
+++ b/VanillaDragDrop/index.html
@@ -13,8 +13,8 @@
       style="cursor: pointer"
       width="40"
       height="40"
-      id="ball"
+      id="ballImage"
     />
-    <script src="./src/main.js" type="text/JavaScript"></script>
+    <script src="./src/main.js" type="module"></script>
   </body>
 </html>
