Feat:  Add gate

--- a/VanillaDragDrop/index.html
+++ b/VanillaDragDrop/index.html
@@ -13,8 +13,9 @@
       style="cursor: pointer"
       width="40"
       height="40"
-      id="ballImage"
+      id="ball"
     />
-    <script src="./src/main.js" type="module"></script>
+    <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate" class="droppable" style="cursor: pointer" margin-bottom="100px" width="83px" height="46px"/>
+    <script src="./src/main.js"></script>
   </body>
 </html>
