Feat: 잠재적 drop 이벤트 원리 파악

--- a/DragDropPractice/MouseEventDrag/index.html
+++ b/DragDropPractice/MouseEventDrag/index.html
@@ -10,6 +10,11 @@
   <body>
     <p>Drag the ball.</p>
     <img
+      src="https://en.js.cx/clipart/soccer-gate.svg"
+      id="gate"
+      class="droppable"
+    />
+    <img
       src="https://js.cx/clipart/ball.svg"
       style="cursor: pointer"
       width="40"
